# mcp-notify

./: README.md  README_en.md  pyproject.toml  server.json
mcp_notify/: __init__.py  other.py  telegram.py  tgbot.py
