[project]
name = "mcp-notify"
version = "0.1.11"
description = "MCP Server for notify"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["notify", "telegram", "weixin", "wework", "lark", "ntfy", "mcp", "llm"]
license = { text = "MIT" }
dependencies = [
    "fastmcp>=2.0.0,<3.0.0",
    "requests>=2.0.0",
    "cachetools>=6.2.0",
    "python-telegram-bot>=22.0",
    "telegramify-markdown==1.1.1",
    "telegramify-markdown[mermaid]==1.1.1",
]

[project.urls]
Repository = "https://github.com/aahl/mcp-notify"

[project.scripts]
mcp-notify = "mcp_notify:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
